fix align

--- a/css/signin.css
+++ b/css/signin.css
@@ -42,7 +42,3 @@ body {
 #logbuttons{
   margin-left: 45px;
 }
-
-#forget{
-   margin-left: 45px;
-}
